src/objects/User.object
<CustomObject>
    <fields>
        <fullName>URS_Employee_Number__c</fullName>
        <label>URS Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URS_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>URS Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URS_FIM_GUID__c</fullName>
        <externalId>true</externalId>
        <label>URS FIM GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Unique__c</fullName>
        <description>Field is used to generate unique user counts on various reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_History_Summary__c</fullName>
        <description>Summary of User&apos;s Work History Profile Parts</description>
        <label>Work History Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Years_Of_Experience__c</fullName>
        <formula>Years_With_AECOM__c +  Years_with_Other_Firms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total years of experience</inlineHelpText>
        <label>Total Years Of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_With_AECOM__c</fullName>
        <formula>(TODAY() -  Adjusted_Service_Date__c)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of years the employee is with AECOM and acquired firm.</inlineHelpText>
        <label>Years With AECOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_with_Other_Firms__c</fullName>
        <inlineHelpText>Number of years the employee worked for other employers than AECOM (AECOM years include acquired firm).</inlineHelpText>
        <label>Years with Other Firms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isDoaAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked for all DoA Admins managing the DoA Approval queue. This box will enable users to access the admin view of DoA</description>
        <inlineHelpText>This box should be checked for all DoA Admins managing the DoA Approval queue. This box will enable users to access the admin view of DoA</inlineHelpText>
        <label>isDoa Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartSearchMyRecentSearch__c</fullName>
        <description>This field is used by the SmartSearch app to store the last 10 searches that were done by this user.</description>
        <inlineHelpText>This field is used by the SmartSearch app to store the last 10 searches that were done by this user.</inlineHelpText>
        <label>smartSearchMyRecentSearch</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smartSearchMyRecentlyViewed__c</fullName>
        <description>This field is used by the SmartSearch app to store the last 10 documents that were clicked by the user</description>
        <label>smartSearchMyRecentlyViewed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xxPMAccredited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the PM is accredited this box should be checked. Drives project setup notification for non-accredited PMs</description>
        <inlineHelpText>If the PM is accredited this box should be checked.</inlineHelpText>
        <label>xxPM Accredited</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AECOM_Standard_User_APAC</fullName>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>Geography_Allocation__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LOCALE</columns>
        <columns>TIMEZONE</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>CRM Lite - ANZ</value>
        </filters>
        <filters>
            <field>Geography_Allocation__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>ANZ - CRM Lite</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ANZ_AECOM_Standard_User_APAC</fullName>
        <columns>Geography_Allocation__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LOCALE</columns>
        <columns>TIMEZONE</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <columns>Confidentiality_Agreement_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>AECOM Standard User - APAC</value>
        </filters>
        <filters>
            <field>Geography_Allocation__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <label>ANZ AECOM Standard User - APAC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>API_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Non_employee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>API</value>
        </filters>
        <label>API Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_but_not_used</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Allocation_Subcategory__c</columns>
        <columns>NA_GNG_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessThan</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Chatter</value>
        </filters>
        <label>Active but not used in six months</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Allocation_Subcategory__c</columns>
        <columns>Geography_Allocation__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Admin</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Africa_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geography_Allocation__c</field>
            <operation>contains</operation>
            <value>Africa</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Africa Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Full_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>MANAGER</columns>
        <columns>Supergeography__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>All Active Full Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>All Users: active/inactive, all profiles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users_WI</fullName>
        <booleanFilter>((1 OR 2) AND 3) AND 4</booleanFilter>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>User_Name__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>.old</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>.old</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>URS_Employee__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All UsersNancy</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admin_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approvers_for_Americas_GNG_Process</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NA_GNG_Approver__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approvers for Americas GNG Process</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>AU</value>
        </filters>
        <label>Australia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CRM_Users_active_wo_content</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Geography_Allocation__c</columns>
        <columns>Allocation_Subcategory__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>SFCONTENT_USER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Superuser - North America</value>
        </filters>
        <filters>
            <field>SFCONTENT_USER</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <label>CRM Users - active w/o Content access</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada_East_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>Auto_Deactivation_Exception__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>schwien</value>
        </filters>
        <label>Canada East Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chatter_Cheap_Permission_Verification</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>SFCONTENT_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>Chatter +</value>
        </filters>
        <filters>
            <field>SFCONTENT_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Chatter Cheap Permission Verification</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Blank_for_URS</fullName>
        <active>true</active>
        <description>Make sure URS employees are not filling in this field</description>
        <errorConditionFormula>AND(URS_Employee__c =TRUE,
ISBLANK(EmployeeNumber) =FALSE)</errorConditionFormula>
        <errorDisplayField>EmployeeNumber</errorDisplayField>
        <errorMessage>Please clear out the employee number.  URS Employee numbers are below in the URS Employee number field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_cannot_edit</fullName>
        <active>false</active>
        <description>Owners cannot edit their own HR Data records</description>
        <errorConditionFormula>( ISCHANGED(FirstName) || ISCHANGED(LastName) || ISCHANGED(Title) || ISCHANGED(ManagerId) || ISCHANGED(Email) || ISCHANGED(Phone) || ISCHANGED( MobilePhone ) || ISCHANGED( Fax ) || ISCHANGED( Street ) || ISCHANGED( City ) || ISCHANGED( State ) || ISCHANGED( PostalCode ) || ISCHANGED( Country ) ) &amp;&amp; Id == $User.Id &amp;&amp;   NOT($Setup.Profile_Info__c.Is_Content_Manager__c)</errorConditionFormula>
        <errorMessage>The data in these fields is controlled by Human Resources. Please contact your HR representative to have it corrected. http://my.aecomnet.com/Intranet/Support/Technology/IT+Support/Service+desk/Updates+to+PeopleSearch</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventEmailChange</fullName>
        <active>true</active>
        <description>This Validation rule is to prevent users from changing their email address</description>
        <errorConditionFormula>AND(ISCHANGED(Email), AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;API Access&quot;, $Profile.Name &lt;&gt; &quot;API Access Restricted&quot; ))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Please contact your local IT Service Desk to request an email change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>testISCHANGED</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(Email)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Email has changed</errorMessage>
    </validationRules>
</CustomObject>